Fix: prevent word wrap on flying titlebars

--- a/src/layout.css
+++ b/src/layout.css
@@ -31,6 +31,8 @@ body > .window-titlebar {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	white-space: nowrap;
+	overflow: hidden;
 }
 .os-window .window-title-area {
 	position: relative;
